--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 @import './icons.css';
+@import './fonts.css';
 :root {
     --primary: #00B050;
     --white: #FFFFFF;
@@ -8,6 +9,13 @@
     --gray40: #181818;
     --gray50: #121212;
     --gray60: #000000;
+    --baseFontFamily: Avenir, Helvetica, sans-serif;
+    --headline1: bold 2rem/normal var(--baseFontFamily);
+    --title1: bold 1.5rem/1.75rem var(--baseFontFamily);
+    --baseFont: normal 0.875rem/1.375rem var(--baseFontFamily);
+    --badeFontBold: bold 0.875rem/1.375rem var(--baseFontFamily);
+    --button: bold 0.875rem/1rem var(--baseFontFamily);
+    --smallFont: normal 0.75em/normal var(--baseFontFamily);
 }
 
 body {
