--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,7 @@
 @import './icons.css';
 @import './fonts.css';
+@import './body.css';
+@import './link.css';
 :root {
     --primary: #00B050;
     --white: #FFFFFF;
@@ -13,11 +15,7 @@
     --headline1: bold 2rem/normal var(--baseFontFamily);
     --title1: bold 1.5rem/1.75rem var(--baseFontFamily);
     --baseFont: normal 0.875rem/1.375rem var(--baseFontFamily);
-    --badeFontBold: bold 0.875rem/1.375rem var(--baseFontFamily);
+    --baseFontBold: bold 0.875rem/1.375rem var(--baseFontFamily);
     --button: bold 0.875rem/1rem var(--baseFontFamily);
     --smallFont: normal 0.75em/normal var(--baseFontFamily);
-}
-
-body {
-    background: var(--primary);
 }
