Add Controles de Reproducción mas styles

--- a/css/slider.css
+++ b/css/slider.css
@@ -1,5 +1,5 @@
 .slider {
-    inline-size: 12.5rem;
+    /* inline-size: 12.5rem; */
     background: rgba(255, 255, 255, 0.2);
     block-size: 0.25rem;
     border-radius: 0.25rem;
