Add Composicíon del Reproductor mas styles

--- a/css/player.css
+++ b/css/player.css
@@ -1,11 +1,30 @@
-/* .player {} */
+@import './slider.css';
+@import './player-controls.css';
+@import './player-playback.css';
+@import './player-volume.css';
+@import './now-playing.css';
+.player {
+    display: flex;
+    gap: 1.5rem;
+    padding: 1rem;
+    box-shadow: inset 0 1px 0 var(--gray30);
+}
+
+.player>* {
+    flex: 1;
+}
 
 .player-control {
     border: 0;
     padding: 0.5rem;
     background: none;
-    font-size: 1.5rem;
+    font-size: 1rem;
     color: var(--gray10);
     cursor: pointer;
     line-height: 1px;
+}
+
+.player-playerVolume {
+    display: flex;
+    justify-content: flex-end;
 }
