Add Lista de reproduccíon A mas styles

--- a/css/button-icon.css
+++ b/css/button-icon.css
@@ -27,7 +27,7 @@
 
 .buttonIcon:hover:is([class*='is-']) {
     box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.3);
-    background: red;
+    /* background: red; */
 }
 
 .buttonIcon:active {
