--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@
 @import './player.css';
 @import './playlist-a.css';
 @import './playlist-b.css';
+@import './playlist-list.css';
 :root {
     font-size: 16px;
     --primary: #00B050;
@@ -20,6 +21,7 @@
     --gray60: #000000;
     --baseFontFamily: Avenir, Helvetica, sans-serif;
     --headline1: bold 2rem/normal var(--baseFontFamily);
+    --headline2: bold 1.5rem/normal var(--baseFontFamily);
     --title1: bold 1.5rem/1.75rem var(--baseFontFamily);
     --baseFont: normal 0.875rem/1.375rem var(--baseFontFamily);
     --baseFontBold: bold 0.875rem/1.375rem var(--baseFontFamily);
