Add navegación interna mas styles

--- a/css/search.css
+++ b/css/search.css
@@ -23,6 +23,7 @@
     border-radius: 1.25rem;
     padding: 0.5rem;
     padding-inline-start: 2rem;
+    border: none;
 }
 
 .search input::-webkit-input-placeholder {
