--- a/css/playlist-list.css
+++ b/css/playlist-list.css
@@ -16,6 +16,10 @@
     margin-block-end: 1rem;
     padding-block-start: 0.5rem;
     padding-block-end: 0.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
 }
 
 .playlistList-title {
