--- a/css/header.css
+++ b/css/header.css
@@ -1,16 +1,17 @@
 .header {
-    display: flex;
-    gap: 1rem;
-    align-items: center;
-    padding-inline-start: 1.5rem;
-    padding-inline-end: 1.5rem;
-    padding-block-start: 1rem;
-    padding-block-end: 1rem;
-    backdrop-filter: blur(5px);
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  padding-inline-start: 1.5rem;
+  padding-inline-end: 1.5rem;
+  padding-block-start: 1rem;
+  padding-block-end: 1rem;
+  backdrop-filter: blur(5px);
+  /* background: red; */
 }
 
 @supports not (backdrop-filter: blur(5px)) {
-    .header {
-        background: var(--gray50);
-    }
+  .header {
+    background: var(--gray50);
+  }
 }
