--- a/css/playlist-list.css
+++ b/css/playlist-list.css
@@ -1,29 +1,32 @@
+@import "./playlist-a.css";
+@import "./playlist-b.css";
+
 .playlistList {
-    /* border: 1px solid red; */
+  /* border: 1px solid red; */
 }
 
 .playlistList-container {
-    display: flex;
-    gap: 1rem;
-    overflow-x: auto;
+  display: flex;
+  gap: 1rem;
+  overflow-x: auto;
 }
 
-.playlistList-container>* {
-    flex-shrink: 0;
+.playlistList-container > * {
+  flex-shrink: 0;
 }
 
 .playlistList-top {
-    margin-block-end: 1rem;
-    padding-block-start: 0.5rem;
-    padding-block-end: 0.5rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
+  margin-block-end: 1rem;
+  padding-block-start: 0.5rem;
+  padding-block-end: 0.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
 }
 
 .playlistList-title {
-    font: var(--headline2);
-    color: var(--white);
-    margin: 0;
+  font: var(--headline2);
+  color: var(--white);
+  margin: 0;
 }
