--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@
 @import "./scrollbar.css";
 
 :root {
-  font-size: 16px;
+  font-size: 12px;
   --primary: #00b050;
   --white: #ffffff;
   --gray10: #b3b3b3;
@@ -28,4 +28,20 @@
   --baseFontBold: bold 0.875rem/1.375rem var(--baseFontFamily);
   --button: bold 0.875rem/1rem var(--baseFontFamily);
   --smallFont: normal 0.75em / normal var(--baseFontFamily);
+}
+
+@media screen and (min-width: 640px) {
+  :root {
+    font-size: 13px;
+  }
+}
+@media screen and (min-width: 768px) {
+  :root {
+    font-size: 14px;
+  }
+}
+@media screen and (min-width: 1367px) {
+  :root {
+    font-size: 18px;
+  }
 }
